--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,12 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+
 hr {
   margin: 1rem 0;
   color: inherit;
