--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2961,7 +2961,8 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 1.7rem;
   line-height: 2rem;
   color: var(--foreground-sub-color);
-  margin-left: 1.2rem;
+  margin-left: 0.2rem;
+  margin-right: 
 }
 
 .hero__profile--thumbnail {
